# LORA_Duplex_Gateway

./: CMakeLists.txt  LoRaSimpleNode.cpp  README.md
LoRa-RP2040/: LoRa-RP2040.cpp  LoRa-RP2040.h
sd_card/: hw_config.c  hw_config.h
ssd1306/: ssd1306.cpp
